[metadata]
name=prpc
version=0.0.1
author=Florian Dupeyron
author_email=florian.dupeyron@mugcat.fr
description=Python library to handle PRPC messages
long_description = file: README.rst
long_description_content_type=text/x-rst
url=https://github.com/fdmysterious/prpc-python
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independant
	Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator


[options]
package_dir =
	= src

include_package_data=true

packages = find:
python_requires = >=3.6

install_requires =
	parsimonious==0.9.0

[options.packages.find]
where = src

[options.package_data]
* = *.peg
